Add all entities, validation, secure ID generation. Fixed minor bugs

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,13 @@
-DB_USER=postgres
-DB_PORT=5432
-DB_PASSWORD=your-super-secret-password-kdjfkdfkdfdfkjdf
-DB_HOST=postgres-zlagoda
-DB_NAME=weather
+# Database Configuration
 DB_DRIVER=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=zlagoda_user
+DB_PASSWORD=your_password_here
+DB_NAME=zlagoda_db
+
+# Server Configuration
 PORT=8080
-GIN_MODE=debug
+
+# Business Configuration
+VAT_RATE=0.2
