--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
-      - postgres-data:/var/lib/postgresql/data     
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 2s
-      timeout: 2s
-      retries: 4
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   migrator-zlagoda:
     build: .
@@ -24,8 +24,8 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
+      DB_HOST: postgres-zlagoda
+      DB_PORT: 5432
       DB_DRIVER: ${DB_DRIVER}
     depends_on:
       postgres-zlagoda:
@@ -40,13 +40,14 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
+      DB_HOST: postgres-zlagoda
+      DB_PORT: 5432
       DB_DRIVER: ${DB_DRIVER}
+      VAT_RATE: ${VAT_RATE:-0.2}
     depends_on:
       migrator-zlagoda:
         condition: service_completed_successfully
     entrypoint: ["./run.sh"]
-  
+
 volumes:
   postgres-data:
